A bit of clean up

--- a/01.schedule.md
+++ b/01.schedule.md
@@ -12,6 +12,7 @@
 | by Sept 26 | Bibs printing 🖨 complete | Fedor |
 | by Oct 8 | Distribute flyers for Stringybark residents | Michael + Emily |
 | by Oct 8 | Info posters on all public areas | Marina + Fedor |
+| from Oct 8 | [Vote in the ACT election early](https://www.elections.act.gov.au/for-voters/how-and-where-to-vote/where-to-vote-early-voting) to free up Oct 19th | Everyone |
 | Oct 10 | Carnival dinner: full payment, finalize setting, info flyers | Marina |
 | by Oct 12 | Collect all 🏆 from all sponsors and partners | Marina, Rohan, Kris |
 | Oct 10, 20:00 | ➡️ Team Zoom Meeting ⬅️ | **Everyone** |
