--- a/03.equipment.md
+++ b/03.equipment.md
@@ -124,6 +124,7 @@ Right five columns indicate whether the item is required for the individual even
 
 - bunting!
 - tent, table, chairs
+- clock(s?)
 
 
 ## Course setting gear
