--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -19,3 +19,23 @@
 | SPRINT | 47 | 71-109, 190-197 | OA, ONSW | + extra 190-203 and 205-224 |
 | LONG | 40 | 31-70 | OACT | |
 
+## Putting control stands into the hard ground
+
+- when the ground is hard
+
+
+## SI units
+
+![bs11bs](_static/img/bs11bs.png)
+
+- We will be using BS11 units that are SI-Air only units with 1.5m range
+- The unit is turned on and off *by magnet* by applying it to the side next to I/O symbol
+
+```{admonition} Activating BS11 units
+:class: caution
+
+The units can not be activated by the competitors!  
+It is very important that the unit is turned on by the setter using the special magnetic stick.
+```
+
+
