small updates in language

--- a/02.people.md
+++ b/02.people.md
@@ -24,15 +24,15 @@ We will be thankful even if you can help during one day, or just some hours.
 |:-|-|-:|-:|
 | <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Course Setter | WARM-UP |
 | Marina Iskhakova | | Course Setter | WARM-UP |
-| Fedor Iskhakov | | Course Controller, mapper | WARM-UP |
+| Fedor Iskhakov | | Course Controller, Mapper | WARM-UP |
 | Cathy Hogg | | Course Setter | MASS |
 | Belinda Allison | | Course Controller | MASS |
 | Michael Reed | | Course Setter | MIDDLE |
 | Emily Walter | | Course Controller | MIDDLE |
 | Tom Walter | | Course Controller | MIDDLE |
-| Cath Chalmers | | Course Setter, mapper | SPRINT |
-| Eoin Rothery | | Course Controller, mapper | SPRINT |
-| Fedor Iskhakov | | Course Setter, mapper | LONG |
+| Cath Chalmers | | Course Setter, Mapper | SPRINT |
+| Eoin Rothery | | Course Controller, Mapper | SPRINT |
+| Fedor Iskhakov | | Course Setter, Mapper | LONG |
 | Marina Iskhakova | | Course Controller | LONG |
 | Andrew Slattery | | Mapper | WARM-UP<br/>MASS<br/>MIDDLE<br/>SPINT<br/>LONG |
 | Tate Needham | | Mapper | MIDDLE |
@@ -63,7 +63,7 @@ We will be thankful even if you can help during one day, or just some hours.
 
 - follow the [schedule](schedule:warmup) for the `start team` on each day
 - set up [start equipment](equipment:start) and bunting 
-- implement the prescribed start arrangement for each event (mass, middle, sprint, long)
+- implement start arrangement for each event (mass, middle, sprint, long) according to the diagrams
 - *MIDDLE event has two separate starts for Championship and Carnival*
 - manage the start process according to the bulletin and the competition rules ([documents](home:documents))
 - pack up the start equipment and get ready for the next event
