--- a/02.people.md
+++ b/02.people.md
@@ -120,13 +120,14 @@ We need 5 volunteers to fill the `start team` roles in each event (warm-up, mass
 | ? | | Leader of the `arena team` | all events |
 | Sergei Maksimov | | Active glass van driver | Saturday, Sunday |
 | Rohan Hyslop | | Toilets trailer | all events |
+| Ariadna Iskhakova | | Road signs and flags | all events |
 | ? | | | ? |
 | ? | | | ? |
 
 :::{admonition} Call for volunteers
 :class: danger
 
-We need 3 more volunteers to fill the `arena team` roles in each event (warm-up, mass, middle, sprint, long). Besides, we need a dedicated team leader who would be able to commit to all events.
+We need 2 more volunteers to fill the `arena team` roles in each event (warm-up, mass, middle, sprint, long). Besides, we need a dedicated team leader who would be able to commit to all events.
 :::
 
 
@@ -154,9 +155,9 @@ We need 3 more volunteers to fill the `arena team` roles in each event (warm-up,
 
 | Name | Contact | Role | Availability |
 |:-|-|-:|-:|
-| ? | | | ? |
-| ? | | | ? |
-| ? | | | ? |
+| ? | | Registration | ? |
+| ? | | Registration | ? |
+| ? | | Registration | ? |
 | Ann Scown | | Map boards hire | all events |
 | John Scown | | Map boards hire | all events |
 
