--- a/03.equipment.md
+++ b/03.equipment.md
@@ -38,7 +38,9 @@ Right five columns indicate whether the item is required for the individual even
 - tent sides!
 - press wall 3x2.4m
 - logo banners?
-
+- tent weights and hold-downs
+- tent walls
+- tent labels/signs/captions
 - road signs
 
 ### + dinner
