--- a/02.people.md
+++ b/02.people.md
@@ -20,7 +20,7 @@ We will be thankful even if you can help during one day, or just some hours.
 (people:courses)=
 ## Event teams
 
-| Name | Contact | Role | Events |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Course Setter | WARM-UP |
 | Marina Iskhakova | | Course Setter | WARM-UP |
@@ -40,7 +40,7 @@ We will be thankful even if you can help during one day, or just some hours.
 (people:special)=
 ## Special support roles
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Social & Trails | In memory |
 | Phil Walker | | Grants | yes |
@@ -70,7 +70,7 @@ We will be thankful even if you can help during one day, or just some hours.
 - use own transport to move equipment between events
 - *relocation between MIDDLE and SPRINT events should happen right after the start is closed*
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | Cath Chalmers | | Leader of the `start team` | all events |
 | ? | | Champ starts | ? |
@@ -115,7 +115,7 @@ We need 5 volunteers to fill the `start team` roles in each event (warm-up, mass
   - *there is only one hour to pack up and set up complete arena*
   - *the drive time between event centers is about 12 minutes*
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | ? | | Leader of the `arena team` | all events |
 | Sergei Maksimov | | Active glass van driver | Saturday, Sunday |
@@ -153,7 +153,7 @@ We need 2 more volunteers to fill the `arena team` roles in each event (warm-up,
   - help with fitting the map board
 - pass information on entry-on-the-day competitors to the `IT team`
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | ? | | Registration | ? |
 | ? | | Registration | ? |
@@ -176,14 +176,14 @@ We need 3 more volunteers to work at the registration tent in each event (warm-u
 - produce preliminary live results and the official Championship results
 - see [separate page](04.computers.md) for detailed information
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | Fedor Iskhakov | `0434019571` | Setup, system, inquiries | <tt>11111</tt> |
 | Alex Maksimov | | MeOS, screens | <tt>11111</tt> |
 | Henry Gotzinger | | MeOS | <tt>10111</tt> |
 | Oliver Gotzinger | | MeOS | <tt>00111</tt> |
 | Owen Radajewski | | MeOS | <tt>00001</tt> |
-| ? | | MeOS | <tt>01000</tt> |
+| ? | | MeOS | <tt>11000</tt> |
 | Tate Needham | | meshO radio controls | ? |
 
 - Availability indicated for WARM-UP, MASS, MIDDLE, SPRINT, LONG
@@ -206,7 +206,7 @@ We need 3 more volunteers to work at the registration tent in each event (warm-u
 We need *many* volunteers to fill the `parking team` roles.  But the days are very different: the table below lists all slots that have to be filled.
 :::
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | ? | | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
 | ? | | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
@@ -240,7 +240,7 @@ We need *many* volunteers to fill the `parking team` roles.  But the days are ve
 - provide help and instructions on how to begin MTBO
 - educate about orienteering in general
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | Toni Brown | | Coach | ? |
 | Raynie McNee | | Coach | ? |
@@ -253,7 +253,7 @@ We need *many* volunteers to fill the `parking team` roles.  But the days are ve
 - watch after the kids while their parents are competing
 - play orienteering games and activities
 
-| Name | Contact | Role | Availability |
+| Name | Contact | Role | When |
 |:-|-|-:|-:|
 | ? | | Supervisor | ? |
 | ? | | Supervisor | ? |
