--- a/01.schedule.md
+++ b/01.schedule.md
@@ -9,6 +9,7 @@
 | by Sept 13 | Order bibs for printing 🖨 | Fedor |
 | by Sept 17 | Publish *Bulletin 3* 📓 | Marina + Fedor |
 | by Sept 20 | Organize map printing 🖨 | Paul, Fedor |
+| by Sept 25 | Small practice maps for each event | Andrew, Fedor |
 | by Sept 26 | Bibs printing 🖨 complete | Fedor |
 | by Oct 8 | Distribute flyers for Stringybark residents | Michael + Emily |
 | by Oct 8 | Info posters on all public areas | Marina + Fedor |
