--- a/02.faces.md
+++ b/02.faces.md
@@ -104,22 +104,28 @@ Promo, social, come-and-try coach
 Promo, social, come-and-try coach
 :::
 :::{grid-item-card}
+![](_static/faces/28_Toni_Brown.jpg) 
++++
+<a href="search.html?q=Toni+Brown" style="text-decoration: none; color: inherit;">Toni Brown</a><br/>
+Come-and-try coach
+:::
+:::{grid-item-card}
 ![](_static/faces/7_Alysha_McNee.jpg) 
 +++
 <a href="search.html?q=Alysha+McNee" style="text-decoration: none; color: inherit;">Alysha McNee</a><br/>
 Promo, social
-:::
-:::{grid-item-card}
-![](_static/faces/10_Ann_Scown.jpg) 
-+++
-<a href="search.html?q=Ann+Scown" style="text-decoration: none; color: inherit;">Ann Scown</a><br/>
-Equipment, hire
 :::
 ::::
 
 ::::{grid}
 :gutter: 2
 
+:::{grid-item-card}
+![](_static/faces/10_Ann_Scown.jpg) 
++++
+<a href="search.html?q=Ann+Scown" style="text-decoration: none; color: inherit;">Ann Scown</a><br/>
+Equipment, hire
+:::
 :::{grid-item-card}
 ![](_static/faces/11_John_Scown.jpg) 
 +++
@@ -138,17 +144,17 @@ Transport, logistics
 <a href="search.html?q=Phil+Walker" style="text-decoration: none; color: inherit;">Phil Walker</a><br/>
 Grants
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/14_Andrew_Cheffers.jpg) 
 +++
 <a href="search.html?q=Andrew+Cheffers" style="text-decoration: none; color: inherit;">Andrew Cheffers</a><br/>
 OACT Finance
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/15_Paul_DeJong.jpg) 
 +++
@@ -167,17 +173,17 @@ Commentary
 <a href="search.html?q=Noel+Schoknecht" style="text-decoration: none; color: inherit;">Noel Schoknecht</a><br/>
 Design
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/18_Ariadna_Iskhakova.jpg) 
 +++
 <a href="search.html?q=Ariadna+Iskhakova" style="text-decoration: none; color: inherit;">Ariadna Iskhakova</a><br/>
 Design
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/19_Ann_Ingwersen.jpg) 
 +++
@@ -191,6 +197,13 @@ Marshal
 Marshal
 :::
 :::{grid-item-card}
+:::
+::::
+
+::::{grid}
+:gutter: 2
+
+:::{grid-item-card}
 ![](_static/faces/21_AlexMaksimov.jpg)
 +++
 <a href="search.html?q=Alex+Maksimov" style="text-decoration: none; color: inherit;">Alex Maksimov</a><br/>
@@ -202,11 +215,6 @@ IT team
 <a href="search.html?q=Henry+Gotzinger" style="text-decoration: none; color: inherit;">Henry Gotzinger</a><br/>
 IT team
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/23_Oliver_Gotzinger.jpg)
 +++
@@ -217,6 +225,23 @@ IT team
 ![](_static/faces/24_Owen_Radajewski.jpg)
 +++
 <a href="search.html?q=Owen+Radajewski" style="text-decoration: none; color: inherit;">Owen Radajewski</a><br/>
+IT team
+:::
+::::
+
+::::{grid}
+:gutter: 2
+
+:::{grid-item-card}
+![](_static/faces/30_Josh_Mansell.jpg)
++++
+<a href="search.html?q=Josh+Mansell" style="text-decoration: none; color: inherit;">Josh Mansell</a><br/>
+IT team
+:::
+:::{grid-item-card}
+![](_static/faces/29_Max_Walter.jpg)
++++
+<a href="search.html?q=Max+Walter.jpg" style="text-decoration: none; color: inherit;">Max Walter</a><br/>
 IT team
 :::
 :::{grid-item-card}
