--- a/04.computers.md
+++ b/04.computers.md
@@ -16,7 +16,11 @@ This page contains the information for the IT team.
 ### Network setup
 
 
+### MeOS setup
 
+- MeOS is run on several computers
+- MySQL database is used to store the data 
+  * pass `MeOS2024`
 
 
 
