--- a/04.computers.md
+++ b/04.computers.md
@@ -1,6 +1,6 @@
 # 💻 IT setup and notes
 
-This page contains the information for the IT team.
+This page contains the information for the **IT team**.
 
 - People: [IT team](people:computers)
 - Time: follow [schedule](schedule:warmup) for the `IT team` on each day
