More on start process

--- a/05.start.md
+++ b/05.start.md
@@ -4,7 +4,7 @@ This page contains the information for the **Start team**.
 
 - People: [Start team](people:start)
 - Time: follow [schedule](schedule:warmup) for the `Start team` on each day
-- Tools: see the full list of [equipment](equipment:start)
+- Gear: see the full list of [equipment](equipment:start)
 
 ## Functions of the start team
 
@@ -31,8 +31,33 @@ The following diagram shows the overall setup of the start area and process for 
 
 ![](_static/img/start_diagram.png)
 
+
+## Gear and equipment
+
+- Each of the two starts has a 3x3m tent, small table and two chairs
+- The table with the map boxes should be placed under the tent, with two lanes for the competitors on both sides of the table
+- Bunting and pigtail stakes should used to mark the start corridor, the minute boxes can be marked by staking the bunting to the ground
+- The route to the start triangle flag should be marked unless visible from the start tent
+
 ## Technical notes
 
-### Setup and checking SI units at the start
+### SI units at the start
+
+- SI units should be arranged in a visible sequence: CLEAR - CHECK - TEST - START (for Carnival classes)
+- CLEAR, CHECK and START units have to be punched (the chip inserted until the beep)
+- TEST unit is there to test whether the chip is working in the radio module --- competitors should just wave over the unit. The range of the test unit is 30cm, whereas all units on the course have a range of 1.5m
+- The most important unit is CHECK: it turns on the SI-Air chip, IT team uses this punch as evidence that a competitor is in the forest
+- **CHECK unit should be held by a start official, and manually given to each competitor as they pass to -3 minutes box**
+- In the Carnival classes it is crucial for the start official to make sure the competitors punch START before beginning their course. In groups going through the course together every chip has to be punched at the START unit.
+- All SI inits should be time-synced and properly set up before the start. They are turned on by inserting SI chip into the unit until the beep. The units should be turned off using special "service off" card after start closes.
+
+### meshO radio units at the start
+
+- Blue SI units with short range radio (SRR) should be used for CHECK and punch START
+- meshO radio unit should be placed within 4-5m from the CHECK unit, and ideally at the same distance from the punch START unit
+- there will be one meshO unit for Championship and one meshO unit for Carnival starts
+- meshO units are turned on by sliding a magnet along the left side of the unit away from the antenna, and turned off by sliding the magnet towards the antenna
 
 ### Setup of start clock
+
+- to be added
