More faces, small updates

--- a/02.faces.md
+++ b/02.faces.md
@@ -22,17 +22,17 @@ Technical Director
 <a href="search.html?q=Sandor+Talas" style="text-decoration: none; color: inherit;">Sandor Talas</a><br/>
 IOF Advisor
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/4_Andrew_Slattery.jpg) 
 +++
 <a href="search.html?q=Andrew+Slattery" style="text-decoration: none; color: inherit;">Andrew Slattery</a><br/>
 Mapper
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/1_WarmUp_JimAnderson.jpg)
 +++
@@ -45,6 +45,11 @@ Social and trails
 <a href="search.html?q=Cathy+Hogg" style="text-decoration: none; color: inherit;">Cathy Hogg</a><br/>
 Course setter MASS
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/2_MASS_Belinda.jpg)
 +++
@@ -57,17 +62,17 @@ Course controller MASS
 <a href="search.html?q=Michael+Reed" style="text-decoration: none; color: inherit;">Michael Reed</a><br/>
 Course setter MIDDLE
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/3_MIDDLE_EmilyWalter.jpg)
 +++
 <a href="search.html?q=Emily+Walter" style="text-decoration: none; color: inherit;">Emily Walter</a><br/>
 Course controller MIDDLE
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/3_MIDDLE_TomWalter.jpg)
 +++
@@ -109,17 +114,17 @@ Promo, social, come-and-try coach
 <a href="search.html?q=Toni+Brown" style="text-decoration: none; color: inherit;">Toni Brown</a><br/>
 Come-and-try coach
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/7_Alysha_McNee.jpg) 
 +++
 <a href="search.html?q=Alysha+McNee" style="text-decoration: none; color: inherit;">Alysha McNee</a><br/>
 Promo, social
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/10_Ann_Scown.jpg) 
 +++
@@ -132,6 +137,11 @@ Equipment, hire
 <a href="search.html?q=John+Scown" style="text-decoration: none; color: inherit;">John Scown</a><br/>
 Equipment, hire
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/12_Rohan_Hyslop.jpg) 
 +++
@@ -144,17 +154,17 @@ Transport, logistics
 <a href="search.html?q=Phil+Walker" style="text-decoration: none; color: inherit;">Phil Walker</a><br/>
 Grants
 :::
+:::{grid-item-card}
+![](_static/faces/14_Andrew_Cheffers.jpg) 
++++
+<a href="search.html?q=Andrew+Cheffers" style="text-decoration: none; color: inherit;">Andrew Cheffers</a><br/>
+OACT Finance, Marshall
+:::
 ::::
 
 ::::{grid}
 :gutter: 2
 
-:::{grid-item-card}
-![](_static/faces/14_Andrew_Cheffers.jpg) 
-+++
-<a href="search.html?q=Andrew+Cheffers" style="text-decoration: none; color: inherit;">Andrew Cheffers</a><br/>
-OACT Finance
-:::
 :::{grid-item-card}
 ![](_static/faces/15_Paul_DeJong.jpg) 
 +++
@@ -196,13 +206,17 @@ Marshal
 <a href="search.html?q=Frank+Ingwersen" style="text-decoration: none; color: inherit;">Frank Ingwersen</a><br/>
 Marshal
 :::
-:::{grid-item-card}
-:::
 ::::
 
 ::::{grid}
 :gutter: 2
 
+:::{grid-item-card}
+![](_static/faces/32_Deirdre_Sharkey.jpg)
++++
+<a href="search.html?q=Deirdre+Sharkey" style="text-decoration: none; color: inherit;">Deirdre Sharkey</a><br/>
+Blue Lightning catering stall
+:::
 :::{grid-item-card}
 ![](_static/faces/21_AlexMaksimov.jpg)
 +++
@@ -215,6 +229,11 @@ IT team
 <a href="search.html?q=Henry+Gotzinger" style="text-decoration: none; color: inherit;">Henry Gotzinger</a><br/>
 IT team
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/23_Oliver_Gotzinger.jpg)
 +++
@@ -227,17 +246,17 @@ IT team
 <a href="search.html?q=Owen+Radajewski" style="text-decoration: none; color: inherit;">Owen Radajewski</a><br/>
 IT team
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/30_Josh_Mansell.jpg)
 +++
 <a href="search.html?q=Josh+Mansell" style="text-decoration: none; color: inherit;">Josh Mansell</a><br/>
 IT team
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/29_Max_Walter.jpg)
 +++
@@ -268,8 +287,10 @@ Ceremonies
 Logistics, Active glass van
 :::
 :::{grid-item-card}
-:::
-:::{grid-item-card}
+![](_static/faces/31_Sam_Wilson.jpg)
++++
+<a href="search.html?q=Sam+Wilson" style="text-decoration: none; color: inherit;">Sam Wilson</a><br/>
+Arena team
 :::
 :::{grid-item-card}
 :::
