--- a/02.people.md
+++ b/02.people.md
@@ -20,43 +20,43 @@ We will be thankful even if you can help during one day, or just some hours.
 (people:courses)=
 ## Event teams
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Course Setter | WARM-UP |
-| Marina Iskhakova | | Course Setter | WARM-UP |
-| Fedor Iskhakov | | Course Controller, Mapper | WARM-UP |
-| Cathy Hogg | | Course Setter | MASS |
-| Belinda Allison | | Course Controller | MASS |
-| Michael Reed | | Course Setter | MIDDLE |
-| Emily Walter | | Course Controller | MIDDLE |
-| Tom Walter | | Course Controller | MIDDLE |
-| Cath Chalmers | | Course Setter, Mapper | SPRINT |
-| Eoin Rothery | | Course Controller, Mapper | SPRINT |
-| Fedor Iskhakov | | Course Setter, Mapper | LONG |
-| Marina Iskhakova | | Course Controller | LONG |
-| Andrew Slattery | | Mapper | WARM-UP<br/>MASS<br/>MIDDLE<br/>SPINT<br/>LONG |
-| Tate Needham | | Mapper | MIDDLE |
+| Name | Role | When |
+|:-|-:|-:|
+| <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | Course Setter | In memory |
+| Marina Iskhakova | Course Setter | WARM-UP |
+| Fedor Iskhakov | Course Controller, Mapper | WARM-UP |
+| Cathy Hogg | Course Setter | MASS |
+| Belinda Allison | Course Controller | MASS |
+| Michael Reed | Course Setter | MIDDLE |
+| Emily Walter | Course Controller | MIDDLE |
+| Tom Walter | Course Controller | MIDDLE |
+| Cath Chalmers | Course Setter, Mapper | SPRINT |
+| Eoin Rothery | Course Controller, Mapper | SPRINT |
+| Fedor Iskhakov | Course Setter, Mapper | LONG |
+| Marina Iskhakova | Course Controller | LONG |
+| Andrew Slattery | Mapper | WARM-UP<br/>MASS<br/>MIDDLE<br/>SPINT<br/>LONG |
+| Tate Needham | meshO radio controls, Mapper | MIDDLE |
 
 (people:special)=
 ## Special support roles
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
+| Name | Role | When |
+|:-|-:|-:|
 | <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Social & Trails | In memory |
-| Phil Walker | | Grants | yes |
-| Andrew Cheffers | | OACT Finance | yes |
-| Paul De Jongh | | OACT Website | |
-| Arpad Koscik | | Commentary | yes |
-| Emily Stewart-Reed | | Promo & Social Media | yes |
-| Raynie McNee | | Promo & Social Media | yes |
-| Alysha McNee | | Promo & Social Media | yes |
-| Noel Schoknecht  | | Design | No |
-| Ariadna Iskhakova | | Design | yes |
-| Veronika Iskhakova | | Presentations Assistant | yes |
-| John Harding | | Photography | yes |
-| Kelvin Meng | | Photography | ? |
-| Tom De Jong | | Photography | ? |
-| Tash Thackray  | | Photography | dinner |
+| Phil Walker | Grants | yes |
+| Andrew Cheffers | OACT Finance | yes |
+| Paul De Jongh | OACT Website | |
+| Arpad Koscik | Commentary | yes |
+| Emily Stewart-Reed | Promo & Social Media | yes |
+| Raynie McNee | Promo & Social Media | yes |
+| Alysha McNee | Promo & Social Media | yes |
+| Noel Schoknecht  | Design | No |
+| Ariadna Iskhakova | Design | yes |
+| Veronika Iskhakova | Presentations Assistant | yes |
+| John Harding | Photography | yes |
+| Kelvin Meng | Photography | ? |
+| Tom De Jong | Photography | ? |
+| Tash Thackray  | Photography | dinner |
 
 (people:start)=
 ## Start team 
@@ -70,14 +70,14 @@ We will be thankful even if you can help during one day, or just some hours.
 - use own transport to move equipment between events
 - *relocation between MIDDLE and SPRINT events should happen right after the start is closed*
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| Cath Chalmers | | Leader of the `start team` | all events |
-| ? | | Champ starts | ? |
-| ? | | Champ starts | ? |
-| ? | | Champ starts | ? |
-| ? | | Carnival starts | ? |
-| ? | | Carnival starts | ? |
+| Name | Role | When |
+|:-|-:|-:|
+| Cath Chalmers | Leader of the `start team` | all events |
+| ? | Champ starts | ? |
+| ? | Champ starts | ? |
+| ? | Champ starts | ? |
+| ? | Carnival starts | ? |
+| ? | Carnival starts | ? |
 
 :::{admonition} Call for volunteers
 :class: danger
@@ -115,14 +115,14 @@ We need 5 volunteers to fill the `start team` roles in each event (warm-up, mass
   - *there is only one hour to pack up and set up complete arena*
   - *the drive time between event centers is about 12 minutes*
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| ? | | Leader of the `arena team` | all events |
-| Sergei Maksimov | | Active glass van driver | Saturday, Sunday |
-| Rohan Hyslop | | Toilets trailer | all events |
-| Ariadna Iskhakova | | Road signs and flags | all events |
-| ? | | | ? |
-| ? | | | ? |
+| Name | Role | When |
+|:-|-:|-:|
+| ? | Leader of the `arena team` | all events |
+| Sergei Maksimov | Active glass van driver | Saturday, Sunday |
+| Rohan Hyslop | Toilets trailer | all events |
+| Ariadna Iskhakova | Road signs and flags | all events |
+| Sam Wilson | | Friday, Saturday, Sunday |
+| ? | | ? |
 
 :::{admonition} Call for volunteers
 :class: danger
@@ -153,13 +153,13 @@ We need 2 more volunteers to fill the `arena team` roles in each event (warm-up,
   - help with fitting the map board
 - pass information on entry-on-the-day competitors to the `IT team`
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| ? | | Registration | ? |
-| ? | | Registration | ? |
-| ? | | Registration | ? |
-| Ann Scown | | Map boards hire | all events |
-| John Scown | | Map boards hire | all events |
+| Name | Role | When |
+|:-|-:|-:|
+| ? | Registration | ? |
+| ? | Registration | ? |
+| ? | Registration | ? |
+| Ann Scown | Map boards hire | all events |
+| John Scown | Map boards hire | all events |
 
 :::{admonition} Call for volunteers
 :class: danger
@@ -176,15 +176,16 @@ We need 3 more volunteers to work at the registration tent in each event (warm-u
 - produce preliminary live results and the official Championship results
 - see [separate page](04.computers.md) for detailed information
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| Fedor Iskhakov | `0434019571` | Setup, system, inquiries | <tt>11111</tt> |
-| Alex Maksimov | | MeOS, screens | <tt>11111</tt> |
-| Henry Gotzinger | | MeOS | <tt>10111</tt> |
-| Oliver Gotzinger | | MeOS | <tt>00111</tt> |
-| Owen Radajewski | | MeOS | <tt>00001</tt> |
-| ? | | MeOS | <tt>11000</tt> |
-| Tate Needham | | meshO radio controls | ? |
+| Name | Role | When |
+|:-|-:|-:|
+| Fedor Iskhakov | Setup, system, inquiries | <tt>11111</tt> |
+| Alex Maksimov | MeOS, screens | <tt>11111</tt> |
+| Henry Gotzinger | MeOS | <tt>10111</tt> |
+| Oliver Gotzinger | MeOS | <tt>00111</tt> |
+| Owen Radajewski | MeOS | <tt>00001</tt> |
+| Max Walter | MeOS | <tt>11000</tt> |
+| Josh Munsell | MeOS | <tt>10000</tt> |
+| Tate Needham | meshO radio controls | <tt>01111</tt> |
 
 - Availability indicated for WARM-UP, MASS, MIDDLE, SPRINT, LONG
 
@@ -206,30 +207,30 @@ We need 3 more volunteers to work at the registration tent in each event (warm-u
 We need *many* volunteers to fill the `parking team` roles.  But the days are very different: the table below lists all slots that have to be filled.
 :::
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| ? | | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
-| ? | | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
-| ? | | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
-| ? | | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
-| ? | | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
-| ? | | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
-| ? | | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
-| ? | | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 10:00 |
-| ? | | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 12:00 |
-| ? | | Traffic marshal | MIDDLE, Oct 19, Friday 9:00 - 12:00 |
-| ? | | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
-| ? | | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
-| ? | | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
-| ? | | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
-| ? | | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
-| ? | | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
-| ? | | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
+| Name | Role | When |
+|:-|-:|-:|
+| ? | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
+| Andrew Cheffers | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| ? | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| Andrew Cheffers | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
+| ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
+| ? | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
+| ? | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
+| ? | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 10:00 |
+| ? | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 12:00 |
+| ? | Traffic marshal | MIDDLE, Oct 19, Friday 9:00 - 12:00 |
+| Andrew Cheffers | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
+| ? | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
+| ? | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
+| ? | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
+| ? | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
+| ? | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
+| ? | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
 
 
 (people:cometry)=
@@ -240,11 +241,11 @@ We need *many* volunteers to fill the `parking team` roles.  But the days are ve
 - provide help and instructions on how to begin MTBO
 - educate about orienteering in general
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| Toni Brown | | Coach | ? |
-| Raynie McNee | | Coach | ? |
-| Emily Stewart-Reed | | Coach | ? |
+| Name | Role | When |
+|:-|-:|-:|
+| Toni Brown | Coach | Thursday, Friday |
+| Raynie McNee | Coach | all events |
+| Emily Stewart-Reed | Coach | all events |
 
 (people:kids-tent)=
 ## Kids tent
