--- a/05.start.md
+++ b/05.start.md
@@ -54,7 +54,7 @@ The following diagram shows the overall setup of the start area and process for 
 ### meshO radio units at the start
 
 - Blue SI units with short range radio (SRR) should be used for CHECK and punch START
-- meshO radio unit should be placed within 4-5m from the CHECK unit, and ideally at the same distance from the punch START unit
+- meshO radio unit should be placed **within 4-5m from the CHECK unit**, and ideally at the same distance from the punch START unit
 - there will be one meshO unit for Championship and one meshO unit for Carnival starts
 - meshO units are turned on by sliding a magnet along the left side of the unit away from the antenna, and turned off by sliding the magnet towards the antenna
 
