Update to people/faces

--- a/02.faces.md
+++ b/02.faces.md
@@ -2,7 +2,7 @@
 # 🤪 Faces of the Carnival
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/1_Marina_Iskhakova.jpg)
@@ -20,12 +20,12 @@ Technical Director
 ![](_static/faces/3_Sandor_Talas.jpg) 
 +++
 <a href="search.html?q=Sandor+Talas" style="text-decoration: none; color: inherit;">Sandor Talas</a><br/>
-IOF Advisor
+Event Advisor
 :::
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/4_Andrew_Slattery.jpg) 
@@ -48,7 +48,7 @@ Course setter MASS
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/2_MASS_Belinda.jpg)
@@ -71,7 +71,7 @@ Course controller MIDDLE
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/3_MIDDLE_TomWalter.jpg)
@@ -94,7 +94,7 @@ Course controller SPRINT
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/5_Emily_StewartReed.jpg) 
@@ -117,7 +117,7 @@ Come-and-try coach
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/7_Alysha_McNee.jpg) 
@@ -140,7 +140,7 @@ Equipment, hire
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/12_Rohan_Hyslop.jpg) 
@@ -163,7 +163,7 @@ OACT Finance, Marshall
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/15_Paul_DeJong.jpg) 
@@ -186,7 +186,7 @@ Design
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/18_Ariadna_Iskhakova.jpg) 
@@ -209,7 +209,7 @@ Marshal
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/32_Deirdre_Sharkey.jpg)
@@ -232,7 +232,7 @@ IT team
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/23_Oliver_Gotzinger.jpg)
@@ -255,7 +255,7 @@ IT team
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/29_Max_Walter.jpg)
@@ -278,7 +278,7 @@ Ceremonies
 ::::
 
 ::::{grid}
-:gutter: 2
+:gutter: 1
 
 :::{grid-item-card}
 ![](_static/faces/27_Sergei_Maksimov.jpg)
@@ -293,5 +293,9 @@ Logistics, Active glass van
 Arena team
 :::
 :::{grid-item-card}
+![](_static/faces/33_John_Harding.jpg)
++++
+<a href="search.html?q=John+Harding" style="text-decoration: none; color: inherit;">John Harding</a><br/>
+Photography
 :::
 ::::
