--- a/02.people.md
+++ b/02.people.md
@@ -15,7 +15,7 @@ We will be thankful even if you can help during one day, or just some hours.
 |:-|-|-:|
 | Marina Iskhakova | `0412308310` | Event Director |
 | Fedor Iskhakov | `0434019571` | Technical Director, `IT team` |
-| Sandor Talas | | IOF Avisor |
+| Sandor Talas | | Event Avisor |
 
 (people:courses)=
 ## Event teams
@@ -56,7 +56,7 @@ We will be thankful even if you can help during one day, or just some hours.
 | John Harding | Photography | yes |
 | Kelvin Meng | Photography | ? |
 | Tom De Jong | Photography | ? |
-| Tash Thackray  | Photography | dinner |
+| Tash Thackray  | Photography | dinner? |
 
 (people:start)=
 ## Start team 
@@ -285,4 +285,4 @@ We need 11 more helpers to collect controls after the events.  Please, see the t
 | MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
 | MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
 | SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>**+2 people** |
-| LONG | Marina<br/>Fedor | **+6 people** |
+| LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>**+4 people** |
