Update to volunteers

--- a/02.people.md
+++ b/02.people.md
@@ -73,7 +73,7 @@ We will be thankful even if you can help during one day, or just some hours.
 | Name | Role | When |
 |:-|-:|-:|
 | Cath Chalmers | Leader of the `start team` | all events |
-| ? | Champ starts | ? |
+| Pat Miethke | Champ starts | MASS, LONG |
 | ? | Champ starts | ? |
 | ? | Champ starts | ? |
 | ? | Carnival starts | ? |
@@ -122,6 +122,7 @@ We need 5 volunteers to fill the `start team` roles in each event (warm-up, mass
 | Rohan Hyslop | Toilets trailer | all events |
 | Ariadna Iskhakova | Road signs and flags | all events |
 | Sam Wilson | | Friday, Saturday, Sunday |
+| ? | | Thursday |
 | ? | | ? |
 
 :::{admonition} Call for volunteers
@@ -155,8 +156,8 @@ We need 2 more volunteers to fill the `arena team` roles in each event (warm-up,
 
 | Name | Role | When |
 |:-|-:|-:|
-| ? | Registration | ? |
-| ? | Registration | ? |
+| Sandra Hogg | Registration | all events |
+| Carol Harding | Registration | all events |
 | ? | Registration | ? |
 | Ann Scown | Map boards hire | all events |
 | John Scown | Map boards hire | all events |
@@ -211,22 +212,22 @@ We need *many* volunteers to fill the `parking team` roles.  But the days are ve
 |:-|-:|-:|
 | ? | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
 | Andrew Cheffers | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
-| ? | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| David Poland | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
 | Andrew Cheffers | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| David Poland | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | ? | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
-| ? | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
-| ? | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
-| ? | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 10:00 |
-| ? | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 12:00 |
-| ? | Traffic marshal | MIDDLE, Oct 19, Friday 9:00 - 12:00 |
-| Andrew Cheffers | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
-| ? | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
-| ? | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
+| David Poland | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
+| ? | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
+| ? | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 10:00 |
+| ? | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 12:00 |
+| ? | Traffic marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
+| ? | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
+| ? | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
+| David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | ? | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
