--- a/02.people.md
+++ b/02.people.md
@@ -54,7 +54,7 @@ We will be thankful even if you can help during one day, or just some hours.
 | Ariadna Iskhakova | Design | yes |
 | Veronika Iskhakova | Presentations Assistant | yes |
 | John Harding | Photography | yes |
-| Kelvin Meng | Photography | ? |
+| Kelvin Meng | Photography | Saturday, Sunday |
 | Tom De Jong | Photography | ? |
 | Tash Thackray  | Photography | dinner? |
 
@@ -158,7 +158,10 @@ We need 2 more volunteers to fill the `arena team` roles in each event (warm-up,
 |:-|-:|-:|
 | Sandra Hogg | Registration | all events |
 | Carol Harding | Registration | all events |
-| ? | Registration | ? |
+| Hind Needham | Registration | WARM-UP, Thursday |
+| ? | Registration | Friday |
+| ? | Registration | Saturday |
+| ? | Registration | Sunday |
 | Ann Scown | Map boards hire | all events |
 | John Scown | Map boards hire | all events |
 
@@ -255,10 +258,12 @@ We need *many* volunteers to fill the `parking team` roles.  But the days are ve
 - watch after the kids while their parents are competing
 - play orienteering games and activities
 
-| Name | Contact | Role | When |
-|:-|-|-:|-:|
-| ? | | Supervisor | ? |
-| ? | | Supervisor | ? |
+| Name | Role | When |
+|:-|-:|-:|
+| Ksenia Maksimova | Supervisor | Thursday |
+| Hind Needham | Supervisor | Friday |
+| ? | Supervisor | Saturday |
+| ? | Supervisor | Sunday |
 
 :::{admonition} Call for volunteers
 :class: danger
